// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`withPreviousAndNext > returns previous and next values for %p [ 1 ] 1`] = `
[
  {
    "current": 1,
    "index": 0,
    "next": undefined,
    "previous": undefined,
  },
]
`;

exports[`withPreviousAndNext > returns previous and next values for %p [ 1, 2, 3 ] 1`] = `
[
  {
    "current": 1,
    "index": 0,
    "next": 2,
    "previous": undefined,
  },
  {
    "current": 2,
    "index": 1,
    "next": 3,
    "previous": 1,
  },
  {
    "current": 3,
    "index": 2,
    "next": undefined,
    "previous": 2,
  },
]
`;

exports[`withPreviousAndNext > returns previous and next values for %p [ 10, 20, 30, 40, 50, 60, 70, 80, 90, 100 ] 1`] = `
[
  {
    "current": 10,
    "index": 0,
    "next": 20,
    "previous": undefined,
  },
  {
    "current": 20,
    "index": 1,
    "next": 30,
    "previous": 10,
  },
  {
    "current": 30,
    "index": 2,
    "next": 40,
    "previous": 20,
  },
  {
    "current": 40,
    "index": 3,
    "next": 50,
    "previous": 30,
  },
  {
    "current": 50,
    "index": 4,
    "next": 60,
    "previous": 40,
  },
  {
    "current": 60,
    "index": 5,
    "next": 70,
    "previous": 50,
  },
  {
    "current": 70,
    "index": 6,
    "next": 80,
    "previous": 60,
  },
  {
    "current": 80,
    "index": 7,
    "next": 90,
    "previous": 70,
  },
  {
    "current": 90,
    "index": 8,
    "next": 100,
    "previous": 80,
  },
  {
    "current": 100,
    "index": 9,
    "next": undefined,
    "previous": 90,
  },
]
`;

exports[`withPreviousAndNext > returns previous and next values for %p [] 1`] = `[]`;
